# dusklight

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  TASKS.md  TASKS_DEFERRED.md  TASKS_ROUTE_PLANNER.md  files.cmake  version.h.in
mods/ao_mod/: CMakeLists.txt  mod.json
mods/ao_mod/res/: composite.wgsl  denoise.wgsl  gtao.wgsl  preprocess_depth.wgsl
mods/ao_mod/src/: mod.cpp
sdk/: CMakeLists.txt
tools/huntctl/: .gitignore  Cargo.toml  README.md
tools/huntctl/assets/: route_workbench.html
tools/huntctl/crates/: README.md
tools/huntctl/crates/bounded-search/: Cargo.toml
tools/huntctl/crates/bounded-search/src/: lib.rs
tools/huntctl/crates/contracts/: Cargo.toml
tools/huntctl/crates/contracts/src/: actor_identity.rs  candidate_envelope.rs  compatibility.rs  controller_program.rs  engine_session.rs  lib.rs  native_fidelity.rs  observation_view.rs  run_terminal.rs  scenario_fixture.rs  tape.rs  typed_facts.rs
tools/huntctl/crates/control/: Cargo.toml
tools/huntctl/crates/control/src/: controller_runtime.rs  game_tactic.rs  lib.rs  option_diagnostics.rs  option_execution.rs  roll_option.rs  tactic_tests.rs  tape_chain.rs  tape_edit.rs  tape_program.rs
tools/huntctl/crates/evaluation/: Cargo.toml
tools/huntctl/crates/evaluation-plan/: Cargo.toml
tools/huntctl/crates/evaluation-plan/src/: lib.rs  tests.rs
tools/huntctl/crates/evaluation/src/: harness_authority.rs  lib.rs  search_evaluator.rs
tools/huntctl/crates/evidence/: Cargo.toml
tools/huntctl/crates/evidence/src/: content_store.rs  corpus.rs  episode.rs  episode_store.rs  lib.rs  native_corpus_inspection.rs  native_dynamic_collider_temporal.rs  native_episode_collision_solver.rs  native_episode_planner.rs  native_episode_relationships.rs  native_episode_shard.rs  native_episode_shard_tests.rs  native_global_temporal.rs  native_return_restart_trace.rs  observation_parity.rs  semantic_state_hash.rs  trace_diff.rs  transition_corpus.rs  transition_evidence.rs
tools/huntctl/crates/finalist-reduction/: Cargo.toml
tools/huntctl/crates/finalist-reduction/src/: boot.rs  lib.rs  route.rs
tools/huntctl/crates/harness-contracts/: Cargo.toml
tools/huntctl/crates/harness-contracts/src/: evaluation.rs  (+5 more)
tools/huntctl/crates/harness-runtime/: Cargo.toml
tools/huntctl/crates/interventions/: Cargo.toml
tools/huntctl/crates/learning/: Cargo.toml
tools/huntctl/crates/objectives/: Cargo.toml
tools/huntctl/crates/oracles/: Cargo.toml
tools/huntctl/crates/orchestration/: Cargo.toml
tools/huntctl/crates/proposals/: Cargo.toml
tools/huntctl/crates/proposer-tournament/: Cargo.toml
tools/huntctl/crates/route-planner/: Cargo.toml
tools/huntctl/crates/routes/: Cargo.toml
tools/huntctl/crates/search/: Cargo.toml
tools/huntctl/crates/semantic-novelty/: Cargo.toml
tools/huntctl/crates/skybook-benchmark/: Cargo.toml
tools/huntctl/crates/throughput-benchmark/: Cargo.toml
tools/huntctl/crates/trace/: Cargo.toml
tools/huntctl/crates/workbench/: Cargo.toml
tools/huntctl/crates/worker/: Cargo.toml
tools/huntctl/crates/world/: Cargo.toml
tools/huntctl/src/: action_guidance.rs  artifact.rs  bayesian_search.rs  behavior_archive.rs  client.rs  comparison_oracle.rs  compatibility.rs  content_store.rs  continuous_search.rs  controller_compilation.rs  controller_program.rs  corpus.rs  corpus_ops.rs  discovery_archive.rs  double_q.rs  episode.rs  fqi.rs  iql.rs  lib.rs  low_data_baselines.rs  main.rs  milestone_dsl.rs  motion_path.rs  objective_conformance.rs  offline_rl.rs  option_execution.rs  option_golf.rs  oracle_pipeline.rs  pool.rs  protocol.rs  q_search.rs  route_store.rs  route_workbench.rs  search.rs  search_evaluator.rs  semantic_novelty.rs  semantic_novelty_catalog.rs  semantic_oracle.rs  tape.rs  tape_chain.rs  (+10 more)
tools/huntctl/src/benchmark/: mod.rs  skybook.rs  skybook_requirements.rs  skybook_selection.rs
tools/huntctl/src/cli/: benchmark.rs  conformance.rs  controller.rs  corpus.rs  fixture.rs  harness.rs  identity.rs  learning.rs  milestone.rs  mod.rs  observation.rs  oracle.rs  route_planner.rs  search.rs  survey.rs  tape.rs  timeline.rs  trace.rs  worker.rs  world.rs
tools/huntctl/src/harness/: campaign.rs  execution.rs  mod.rs  objective_suite.rs  run_contract.rs
tools/huntctl/src/intervention/: control_pair.rs  evidence.rs  experiment.rs  mod.rs  parameter_search.rs  runtime.rs
tools/huntctl/src/learning/: calibration.rs  double_q.rs  dyna_mixture.rs  ensemble_q.rs  evaluation_isolation.rs  factorized_actions.rs  fixed_representation.rs  fqi.rs  frozen_inference.rs  goal_conditioning.rs  graph_representation.rs  hindsight.rs  history_critics.rs  inference_conformance.rs  inference_placement.rs  iql.rs  local_dynamics.rs  mod.rs  model_ownership.rs  model_representation.rs  offline_rl.rs  online_lineage.rs  option_policy.rs  option_values.rs  planning_priors.rs  q_search.rs  reward_shaping.rs  rl_readiness.rs  training_guard.rs  training_lineage.rs
tools/huntctl/src/semantic_novelty/: archive.rs  campaign.rs  clustering.rs  headful_review.rs  human_labels.rs  minimization.rs  proposal_signal.rs
tools/huntctl/tests/: benchmark_cli.rs  campaign_cli.rs  controller_cli.rs  corpus.rs  harness_cli.rs  identity_cli.rs  learn_cli.rs  milestone_cli.rs  objective_conformance.rs  observation_cli.rs  oracle_cli.rs  pool.rs  process_roundtrip.rs  search_cli.rs  search_evaluate_cli.rs  stage_smoke_catalog.rs  survey_cli.rs  tape_cli.rs  timeline_cli.rs  world_spatial_cli.rs
tools/route-planner/: Cargo.toml  README.md  VISUAL_GRAMMAR.md
tools/route-planner/crates/engine/: Cargo.toml
tools/route-planner/libraries/: demo-auru-recent-item-transfer.json  demo-fanadi-return-place.json  demo-forest-keyed-door.json  demo-hypothetical-local-bank-rebind.json  demo-opening-flow.json  demo-text-displacement-goron-mines.json
tools/route-planner/src/: context_compare.rs  inspection.rs  lib.rs  main.rs  project.rs  service.rs  web.rs  workspace.rs
tools/route-planner/src/web/: app.css  app.js  index.html
tools/route-planner/tests/: browser_acceptance.mjs  browser_acceptance.rs
(+791 files in other folders)
